tests/neg-custom-args/captures/nicolas1.check
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/nicolas1.scala:11:5 ------------------------------------
11 |  all(nextInt(all.length)) // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^
   |  References {head, tail*} are not all included in the allowed capture set {head}
   |  of an enclosing function literal with expected type (Rand^) ?->{head} A.
